--- a/Relógio Luxuoso/index.html
+++ b/Relógio Luxuoso/index.html
@@ -12,8 +12,8 @@
     <div class="conteiner">
         <header>
             <div class="logo">
-                <img src="imagens/logo2.png" alt="#"/>
-                <h1>Watch<span>kmos</span></h1>
+                <img src="imagens/logo.png" alt="logo"/>
+                <h1>Relógios shop</h1>
             </div>
             <ul>
                 <li><a href="#">Menu</a></li>
