Lista de passos a seguir
Lista de passos a seguir

--- a/Lâmpada/index.html
+++ b/Lâmpada/index.html
@@ -21,8 +21,16 @@
             <button id="turnOff">Desligar</button>
         </div>
     </main>
+    <div class="lista">
+        <ol class="lista-passos"> Siga esses passos !!
+            <li>Passe o mouse sobre a lâmpada.</li>
+            <li>Tente ligar e desligar com os botões.</li>
+            <li>Agora tente dar um click duplo na lâmpada !</li>
+            <li>Quebrou ? Tente atualizar a página (aperte o F5)</li>
+        </ol>
+    </div>
     
     <script src="lampada.js"></script>
-    
+
 </body>
 </html>
